--- a/index.html
+++ b/index.html
@@ -4,66 +4,7 @@
 <meta charset="UTF-8">
 <title>Insert title here</title>
 </head>
-<script language="javascript">
-function test()
-{
-	var s=form1.name.value;
-var s1=form1.password1.value;
-var s2=form1.password2.value;
-if(s!=s2)
-{
-	
-alert(s+"您好，您的密码输入不一致，请重新输入");
-
-}
-}
-</script>
-<style>
-image
-{
-	width:1000px;
-	height:7500px;
-	
-	position:absolute;
-	left:0px;
-	top:0px;
-	
-}
-p
-{
-position:absoulute;
-top:50px;
-left:200px;
-color:#000;
-}
-</style>
-<body background="网络数据库2/a2.jpg">
-
-　　　　　<p>　　　　　　　　　请输入信息注册</p>
-　　　　　<p>　　　　　　　　　请输入姓名</p>
-<form action="网络数据库2/reg.jsp"method="post"name="form1">
-　　　　　　　　　<input type="text"name="name">
-<p>　　　　　　　　　请输入密码</p>
-　　　　　　　　　<input type="password"name="password1">
-<p>　　　　　　　　　请再次输入密码</p>
-　　　　　　　　　<input type="password"name="password2">
-<br>
-<br>
-　　　　　　　　　<input type="checkbox"name="sex"value="男">男
-　　　　　　　　　<input type="checkbox"name="sex"value="女">女
-<br>
-<br>
-　　　　　<p>　　　　　　　　　请选择城市</p>
-　　　　　　　　　<select name="city"size="4"multiple>
-　　　　　　　　　<option>北京</option>
-　　　　　　　　　<option>上海</option>
-　　　　　　　　　<option>深圳</option>
-　　　　　　　　　<option>武汉</option>
-</select>
-　　　　　<p>　　　　　　　　　请输入备注</p>>
-　　　　　　　　　<textarea name="add"cols="5"rows="5">
-</textarea>>
-　　　　　　　　　<input type="submit"value="提交信息"onclick="test()">
-</form>
+ 
+	<p>Wanglinai,I love you!To be my wife!</p>
 </body>
 </html>
