--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 <ul>
 <li class="active"><a href="index.html"><span>主页</span></a></li>
 <li><a href="http://my.csdn.net/qq_35226571?locationNum=0&fps=1"><span>我的博客</span></a></li>
-<li><a href="ceping/index1.html"><span>心理测评系统</span></a></li>
+<li><a href="http://zhengluyao.top/ceping/index1.html"><span>心理测评系统</span></a></li>
 <li><a href="form.html"><span>考试报名系统</span></a></li>
 </ul>
 </nav>
