--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en-US">
 <head>
 <meta charset="UTF-8" />
-<title>Free CSS Template : Studio One</title>
+<title>谢訥铮的个人主页</title>
 
 <link href="style.css" rel="stylesheet" type="text/css">
 <link href="styles/print/main.css" rel="stylesheet" type="text/css" media="print">
