--- a/oneyear/toMylover.html
+++ b/oneyear/toMylover.html
@@ -8,7 +8,7 @@
     <!-- Basic Page Needs
   ================================================== -->
 	<meta charset="utf-8">
-	<title>zLoveStory | Free Html5 Templates</title>
+	<title>铮瑷一生</title>
 	<meta name="description" content="Free Responsive Html5 Css3 Templates | zerotheme.com">
 	<meta name="author" content="www.zerotheme.com">
 	
