--- a/oneyear/toMylover.html
+++ b/oneyear/toMylover.html
@@ -87,7 +87,7 @@
 						<div class="box-item">
 							<div class="col-1-2 f-right">
 								<div class="wrap-col">
-									<div class="wrap-img t-center"><img src="images/linai5.jpg" width="34" height="33" title="icon-name"></div>
+									<div class="wrap-img t-center"><img src="images/linai.jpg" width="245" height="93" title="icon-name"></div>
 									<h3>王琳瑷</h3>
 								</div>
 							</div>
@@ -226,7 +226,7 @@
 								</li>
 								<li class="timeline-inverted ">
 									<div class="timeline-image">
-										<h4>Together <br>Forever</h4>
+										<h4>成长经历相似的两个人相依为命，不离不弃，相伴始终</h4>
 									</div>
 								</li>
 							</ul>
@@ -254,7 +254,7 @@
 									<div class="zoom-container">
 										<a href="#">
 											<span class="zoom-caption">
-												<h3>Lorem ipsum</h3>
+												<h3>柔情似水</h3>
 											</span>
 											<img src="images/4.jpg" />
 										</a>
@@ -264,7 +264,7 @@
 									<div class="zoom-container">
 										<a href="#">
 											<span class="zoom-caption">
-												<h3>Lorem ipsum</h3>
+												<h3>佳期如梦</h3>
 											</span>
 											<img src="images/5.jpg" />
 										</a>
@@ -274,7 +274,7 @@
 									<div class="zoom-container">
 										<a href="#">
 											<span class="zoom-caption">
-												<h3>Lorem ipsum</h3>
+												<h3>两情誓言长久时</h3>
 											</span>
 											<img src="images/6.jpg" />
 										</a>
@@ -284,7 +284,7 @@
 									<div class="zoom-container">
 										<a href="#">
 											<span class="zoom-caption">
-												<h3>Lorem ipsum</h3>
+												<h3>见证在朝朝暮暮</h3>
 											</span>
 											<img src="images/7.jpg" />
 										</a>
@@ -296,7 +296,7 @@
 									<div class="zoom-container">
 										<a href="#">
 											<span class="zoom-caption">
-												<h3>Lorem ipsum</h3>
+												<h3>所谓伊人</h3>
 											</span>
 											<img src="images/8.jpg" />
 										</a>
@@ -306,7 +306,7 @@
 									<div class="zoom-container">
 										<a href="#">
 											<span class="zoom-caption">
-												<h3>Lorem ipsum</h3>
+												<h3>在水一方</h3>
 											</span>
 											<img src="images/9.jpg" />
 										</a>
@@ -316,7 +316,7 @@
 									<div class="zoom-container">
 										<a href="#">
 											<span class="zoom-caption">
-												<h3>Lorem ipsum</h3>
+												<h3>琳瑷淑女</h3>
 											</span>
 											<img src="images/10.jpg" />
 										</a>
@@ -326,7 +326,7 @@
 									<div class="zoom-container">
 										<a href="#">
 											<span class="zoom-caption">
-												<h3>Lorem ipsum</h3>
+												<h3>狗子好逑</h3>
 											</span>
 											<img src="images/11.jpg" />
 										</a>
@@ -338,7 +338,7 @@
 									<div class="zoom-container">
 										<a href="#">
 											<span class="zoom-caption">
-												<h3>Lorem ipsum</h3>
+												<h3>温柔善良</h3>
 											</span>
 											<img src="images/12.jpg" />
 										</a>
@@ -348,7 +348,7 @@
 									<div class="zoom-container">
 										<a href="#">
 											<span class="zoom-caption">
-												<h3>Lorem ipsum</h3>
+												<h3>独立自强</h3>
 											</span>
 											<img src="images/13.jpg" />
 										</a>
@@ -358,7 +358,7 @@
 									<div class="zoom-container">
 										<a href="#">
 											<span class="zoom-caption">
-												<h3>Lorem ipsum</h3>
+												<h3>古灵精怪</h3>
 											</span>
 											<img src="images/14.jpg" />
 										</a>
@@ -368,7 +368,7 @@
 									<div class="zoom-container">
 										<a href="#">
 											<span class="zoom-caption">
-												<h3>Lorem ipsum</h3>
+												<h3>可爱淘气</h3>
 											</span>
 											<img src="images/15.jpg" />
 										</a>
