--- a/oneyear/toMylover.html
+++ b/oneyear/toMylover.html
@@ -94,8 +94,9 @@
 							<div class="col-1-2 t-right">
 								<div class="wrap-col">
 									<div class="info">
-										<p>狗子....给我捏捏腿，顺便讲个故事！
-                                        娜娜，明天想去吃鲨鱼吃面...C语言不会你教我嘛！！要考试了给我提问下知识点好嘛....</p>
+										<p>狗子....给我捏捏腿，顺便讲个故事！<br>
+                                        娜娜，明天想去吃鲨鱼吃面...<br>C语言不会你教我嘛！！<br>要考试了给我提问下知识点好嘛....<br>狗子，你是不是想挨揍了？<br>晚安，么么哒
+                                       </p>
 									</div>
 								</div>
 							</div>
@@ -192,7 +193,7 @@
 											<h4 class="subheading">朝朝暮暮</h4>
 										</div>
 										<div class="timeline-body">
-											<p class="text-muted">接下来半年，我只记得每天图书馆去接她吃饭，牵着手开心的奔向西区亦或是北区的餐厅....压遍了八一路到光谷大桥的那些路...坐塌了北大门情人坡旁边的恋爱专座...春天去了武汉各个好玩的樱花盛开的景区....拍了千把张丑丑的丑照....</p>
+											<p class="text-muted">接下来半年，我只记得每天图书馆去接她吃饭，牵着手开心的奔向西区亦或是北区的餐厅....压遍了八一路到光谷大桥的那些路...坐塌了北大门情人坡旁边的恋爱专座...春天去了武汉各个好玩的樱花盛开的景区....拍了千把张丑丑的丑照....即使吵架也未曾缺席的晚安....</p>
 										</div>
 									</div>
 								</li>
@@ -226,7 +227,7 @@
 								</li>
 								<li class="timeline-inverted ">
 									<div class="timeline-image">
-										<h4>成长经历相似的两个人相依为命，不离不弃，相伴始终</h4>
+										<h4>相互取暖，相依为命</h4>
 									</div>
 								</li>
 							</ul>
