--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+﻿<!doctype html>
 
 <html lang="en-US">
 <head>
@@ -31,7 +31,7 @@
 <li class="active"><a href="index.html"><span>主页</span></a></li>
 <li><a href="http://my.csdn.net/qq_35226571?locationNum=0&fps=1"><span>我的博客</span></a></li>
 <li><a href="http://xienezheng.github.io/ceping/index1.html"><span>心理测评系统</span></a></li>
-<li><a href="http://xienezheng.github.io/OnlineShop/index.html"><span>在线商城系统</span></a></li>
+<li><a href="http://xienezheng.github.io/OnlineShop1/index.html"><span>在线商城系统</span></a></li>
 </ul>
 </nav>
 </section>
