--- a/ceping/index1.html
+++ b/ceping/index1.html
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML>
+﻿<!DOCTYPE HTML>
 <html lang="en-US">
 	<head>
         <!--=============== Meta and Title  ===============-->
@@ -151,7 +151,7 @@
 					<div class="row">
 						<div class="col-sm-12">
 							<div class="servicer_area_text">
-								<a href="http://zhengluyao.top/ceping/cepingshixian/index2.html"><h2>跳转到测评系统</h2></a>			<!-- Page title -->
+								<a href="http://xienezheng.github.io/ceping/cepingshixian/index2.html"><h2>跳转到测评系统</h2></a>			<!-- Page title -->
 			
 							</div>
 						</div>
